@@ -4,6 +4,8 @@ This file lists the incompatible changes between Version 2.x and older versions
 ===============================
   - dirpowerssum0 now requires an extra argument f to allow a completely
     multiplicative function (can be set to NULL, i.e. constant function = 1)
+  - change prototype of FqV_to_FlxV, FqC_to_FlxC, FqM_to_FlxM: argument 'p' is
+    an ulong, no longer a GEN
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.12 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the member function bnf.futu and .tufu (deprecated since 2.2) have been
